--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -133,3 +133,17 @@ img.media-object {
     width: 48px;
     height: 48px;
 }
+
+form[novalidate] input {
+    border-left-width: 8px;
+    border-color: #3498db;
+    border-style: solid;
+}
+
+input[required].ng-pristine {
+    border-color: #e74c3c;
+}
+
+input.ng-invalid.ng-dirty {
+    border-color: #e74c3c;
+}
