--- a/server/public/client/app/views/login.html
+++ b/server/public/client/app/views/login.html
@@ -5,7 +5,7 @@
                 <legend>Sign in</legend>
                 <div class="form-group">
                     <label>Email</label>
-                    <input class="form-control" type="email" ng-model="user.name" required />
+                    <input class="form-control" type="email" ng-model="user.email" required />
                 </div>
                 <div class="form-group">
                     <label>Password</label>
