--- a/server/public/client/app/views/home.html
+++ b/server/public/client/app/views/home.html
@@ -7,7 +7,9 @@
     <div class="icons">我参与的</div>
     <div class="icons">热门</div>
     <div class="icons">设置</div>
-    <div class="icons">退出</div>
+    <div class="icons">
+        <a href="/logout">退出</a>
+    </div>
 </div>
 <div id="content-wrapper">
     <div class="topic-container">
