--- a/server/public/client/app/styles/main.css
+++ b/server/public/client/app/styles/main.css
@@ -58,11 +58,12 @@
     position: fixed;
     top: 0px;
     left: 70px;
+    right: 0px;
     width: 100%;
     height: 100%;
 }
 
-#content-wrapper .topic-container {
+#topic-container {
     position: fixed;
     background: #ffffff;
     width: 40%;
@@ -76,11 +77,9 @@
     color: rgb(52, 73, 94);
 }
 
-#content-wrapper .topic-detail {
+#topic-detail {
     width: 60%;
     float: right;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .topics>li {
@@ -146,4 +145,34 @@ input[required].ng-pristine {
 
 input.ng-invalid.ng-dirty {
     border-color: #e74c3c;
+}
+
+div.icons:hover {
+    color: #52c1ff;
+    cursor: pointer;
+}
+
+div.icons span {
+    display: block;
+    font-size: 40px;
+    text-align: center;
+}
+
+div.icons p {
+    text-align: center;
+    margin-top: 15px;
+}
+
+div.icons a {
+    color: inherit;
+    display: block;
+}
+
+div.icons a:hover {
+    text-decoration: none;
+}
+
+#topic-detail img.media-object {
+    width: 30px;
+    height: 30px;
 }
