--- a/server/public/client/app/views/home.html
+++ b/server/public/client/app/views/home.html
@@ -1,54 +1,94 @@
 <div id="aside">
-    <div class="profile-image">
-        <img class="img-circle" src="http://tp1.sinaimg.cn/2972287924/180/40002983278/1" alt="profile image" />
+    <div class="icons">
+        <span class="glyphicon glyphicon-home"></span>
+        <p>个人中心</p>
     </div>
-    <div class="icons">新建话题</div>
-    <div class="icons">我发起的</div>
-    <div class="icons">我参与的</div>
-    <div class="icons">热门</div>
-    <div class="icons">设置</div>
-    <div class="icons"><a href="#" data-ng-click="logout()">退出</a></div>
+    <div class="icons">
+        <a data-toggle="modal" href="#myModal">
+        <span class="glyphicon glyphicon-pencil"></span>
+        <p>
+            新建
+        </p>
+        </a>
+    </div>
+    <div class="icons">
+        <span class="glyphicon glyphicon-cog"></span>
+        <p>设置</p>
+    </div>
+    <div class="icons" data-ng-click="logout()">
+        <span class="glyphicon glyphicon-off"></span>
+        <p>退出</p>
+    </div>
 </div>
 <div id="content-wrapper">
-    <div class="topic-container">
+    <div id="topic-container">
+        <input type="search" class="form-control" data-ng-model="query" placeholder="seach">
         <ul class="list-unstyled topics">
-            <li class="clearfix" data-ng-repeat="topic in topics" data-ng-click="setDetail(topic.id)">
+            <li class="clearfix" data-ng-repeat="topic in topics | filter:query" data-ng-click="setDetail($index)">
             <div class="pull-left">
-                <img class="img-rounded" data-ng-src="{{ topic.profileImg }}" alt="" />
+                <img class="img-rounded" data-ng-src="{{ topic.avatar }}" alt="" />
             </div>
             <div class="topic-content">
-                <div>
-                    <strong>{{ topic.title }}</strong>
-                    <span><a class="at" href="#">@{{ topic.founder }}</a></span>
-                </div>
-                <p class="no-margin">{{ topic.description }}</p>
-                <b class="expand-action">
-                    <span><a href="#">展开</a></span>
-                    <span class="hidden"><a href="#">收起</a></span>
-                </b>
-                <ul class="actions hidden list-unstyled list-inline pull-right">
-                    <li><a href="#">回复</a></li>
-                    <li><a href="#">邀请</a></li>
-                    <li><a href="#">喜欢</a></li>
-                    <li><a href="#">更多</a></li>
-                </ul>
+                <p class="no-margin">{{ topic.content }}</p>
             </div>
             </li>
         </ul>
     </div>
-    <div class="topic-detail">
-        <h1>{{ topicDetail.id }}</h1>
-        <h1>{{ loggedIn }}</h1>
-        <div class="media">
-            <a class="pull-left" href="#">
-                <img class="media-object img-circle" data-ng-src="{{ topicDetail.profileImg }}" alt="profile image" />
-            </a>
-            <div class="media-body">
-                <h4 class="media-heading">
-                    {{ topicDetail.title }}
-                </h4>
-                {{ topicDetail.description }}
+    <div id="topic-detail">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object" data-ng-src="{{ topics[currentTopicIndex].avatar }}" alt="avatar">
+                    </a>
+                    <div class="media-body">
+                        <p><strong>{{ topics[currentTopicIndex].create_by }}</strong></p>
+                        <p> {{ topics[currentTopicIndex].content }}</p>
+                    </div>
+                </div>
             </div>
+        </div>
+        <form data-ng-submit="postNewReply()" role="form" name="replyForm" novalidate>
+            <div class="form-group">
+                <label for="">新回复</label>
+                <textarea class="form-control" data-ng-model="newReply" type="text" rows="7" required></textarea>
+            </div>
+            <button data-ng-disabled='replyForm.$invalid' class="btn btn-primary">回复</button>
+        </form>
+        <div id="replies" data-ng-repeat="reply in replies">
+            <div class="media">
+                <a class="pull-left" href="#">
+                    <img class="media-object" data-ng-src="{{ reply.avatar }}" alt="avatar">
+                </a>
+                <div class="media-body">
+                    {{ reply.content }}
+                </div>
+            </div>
+        </div>
+        <div class="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            {{ flashMessage }}
         </div>
     </div>
 </div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">新建话题</h4>
+            </div>
+            <div class="modal-body">
+                <form data-ng-submit="postNewTopic()" name="form" role="form" novalidate>
+                    <div class="form-group">
+                        <label>描述</label>
+                        <textarea class="form-control" data-ng-model="newTopic.content" type="text" rows="7" required></textarea>
+                    </div>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button data-ng-disabled='form.$invalid' class="btn btn-primary">提交</button>
+                </form>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
