--- a/server/public/client/app/views/index.html
+++ b/server/public/client/app/views/index.html
@@ -1,3 +1,4 @@
 <div>
     <a class="btn btn-primary" href="#/login">Sign in</a>
+    <a class="btn btn-primary" href="#/register">Register</a>
 </div>
