--- a/server/public/client/app/views/home.html
+++ b/server/public/client/app/views/home.html
@@ -1,97 +1,79 @@
 <div id="aside">
-    <div class="icons">
-        <span class="glyphicon glyphicon-home"></span>
-        <p>个人中心</p>
-    </div>
-    <div class="icons">
-        <a data-toggle="modal" href="#myModal">
-        <span class="glyphicon glyphicon-pencil"></span>
-        <p>
-            新建
-        </p>
-        </a>
-    </div>
-    <div class="icons">
-        <span class="glyphicon glyphicon-cog"></span>
-        <p>设置</p>
-    </div>
-    <div class="icons" data-ng-click="logout()">
-        <span class="glyphicon glyphicon-off"></span>
-        <p>退出</p>
-    </div>
+    <ul class="nav">
+        <li><a href="#/home"><span class="glyphicon glyphicon-home"></span>主页</a></li>
+        <li><a href="#/feed"><span class="glyphicon glyphicon-comment"></span>消息</a></li>
+        <li><a href data-ng-click="toggleNewTopic()"><span class="glyphicon glyphicon-pencil"></span>新建</a></li>
+        <li><a href=""><span class="glyphicon glyphicon-cog"></span>设置</a></li>
+        <li><a href data-ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span>退出</a></li>
+    </ul>
 </div>
-<div id="content-wrapper">
-    <div id="topic-container">
-        <input type="search" class="form-control" data-ng-model="query" placeholder="seach">
-        <ul class="list-unstyled topics">
-            <li class="clearfix" data-ng-repeat="topic in topics | filter:query" data-ng-click="setDetail($index)">
-            <div class="pull-left">
-                <img class="img-rounded" data-ng-src="{{ topic.avatar }}" alt="" />
+<div id="content-wrapper" class="row">
+    <div id="topics" class="col-md-4">
+        <div class="query">
+            <input type="text" data-ng-model="query" placeholder="查找">
+        </div>
+        <ul class="media-list">
+            <li data-ng-repeat="topic in topics | filter:query" data-ng-class="{media: true, selected: currentTopicIndex==$index}" data-ng-click="setDetail($index)" >
+            <a class="pull-left" href>
+                <img class="media-object img-rounded" data-ng-src="{{topic.avatar}}" alt="avatar for {{topic.create_by}}">
+            </a>
+            <div class="media-body">
+                <p><strong>{{topic.create_by}}</strong><span class="badge pull-right">{{topic.reply_count || 0}}</span></p>
+                {{topic.content}}
+                <div class="created-at"><span class="pull-right">{{topic.created_at | date:'MM/dd/yyyy @ h:mma'}}</span></div>
             </div>
-            <div class="topic-content">
-                <p class="no-margin">{{ topic.content }}</p>
+            </li>
+        </ul>
+        <button data-ng-click="nextPage()" type="button" class="pull-right btn btn-link">下一页</button>
+    </div>
+    <div id="topic-detail" class="col-md-8">
+        <ul class="media-list">
+            <li data-ng-repeat="reply in replies">
+            <div class="media">
+                <a class="pull-left" href>
+                    <img class="media-object" data-ng-src="{{reply.avatar}}" alt="avatar for {{reply.create_by}}">
+                </a>
+                <div class="media-body">
+                    <p><strong>{{reply.create_by}}</strong>
+                    <span class="pull-right glyphicon glyphicon-share-alt"></span>
+                    <span class="pull-right created-at">{{reply.created_at | date:'MM/dd/yyyy @ h:mma'}}</span>
+                    </p>
+                </div>
+            </div>
+            <div class="message-content">{{reply.content}}</div>
+            </li>
+            <li>
+            <div class="media">
+                <a class="pull-left" href>
+                    <img class="media-object" data-ng-src="{{user.avatar}}" alt="avatar for {{user.avatar}}">
+                </a>
+                <div class="media-body">
+                    <form role="form" name="replyForm" data-ng-submit="postNewReply()">
+                        <div class="form-group">
+                            <textarea data-ng-model="newReply" class="form-control" rows="2" placeholder="点击添加回复" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button data-ng-disabled="replyForm.$invalid" class="btn btn-primary btn-sm">回复</button>
+                        </div>
+                    </form>
+                </div>
             </div>
             </li>
         </ul>
     </div>
-    <div id="topic-detail">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <div class="media">
-                    <a class="pull-left" href="#">
-                        <img class="media-object" data-ng-src="{{ topics[currentTopicIndex].avatar }}" alt="avatar">
-                    </a>
-                    <div class="media-body">
-                        <p><strong>{{ topics[currentTopicIndex].create_by }}</strong></p>
-                        <p> {{ topics[currentTopicIndex].content }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <form data-ng-submit="postNewReply()" role="form" name="replyForm" novalidate>
-            <div class="form-group">
-                <label for="">新回复</label>
-                <textarea class="form-control" data-ng-model="newReply" type="text" rows="7" required></textarea>
-            </div>
-            <button data-ng-disabled='replyForm.$invalid' class="btn btn-primary">回复</button>
-        </form>
-        <div id="replies" data-ng-repeat="reply in replies">
-            <div class="media">
-                <a class="pull-left" href="#">
-                    <img class="media-object" data-ng-src="{{ reply.avatar }}" alt="avatar">
-                </a>
-                <div class="media-body">
-                    <div class="media-heading">
-                        {{ reply.create_by }}
-                    </div>
-                    {{ reply.content }}
-                </div>
-            </div>
-        </div>
-        <div class="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            {{ flashMessage }}
-        </div>
-    </div>
 </div>
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">新建话题</h4>
-            </div>
-            <div class="modal-body">
-                <form data-ng-submit="postNewTopic()" name="form" role="form" novalidate>
-                    <div class="form-group">
-                        <label>描述</label>
-                        <textarea class="form-control" data-ng-model="newTopic.content" type="text" rows="7" required></textarea>
-                    </div>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                    <button data-ng-disabled='form.$invalid' class="btn btn-primary">提交</button>
-                </form>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+
+<div id="new-topic-form" data-ng-show="showNewTopicForm">
+    <div class="new-topic-heading">
+        <strong>新建话题</strong>
+        <span data-ng-click="toggleNewTopic()" class="pull-right glyphicon glyphicon-remove"></span>
+    </div>
+    <form role="form" name="newTopicForm" data-ng-submit="postNewTopic()">
+        <div class="form-group">
+            <textarea data-ng-model="newTopic.content" class="form-control" rows="10" required></textarea>
+        </div>
+        <div class="form-group">
+            <button data-ng-disabled="newTopicForm.$invalid" class="btn btn-success btn-sm">新建</button>
+        </div>
+    </form>
+</div>
